kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photon-neuro-service
  namespace: photon-neuro
  labels:
    app: photon-neuro
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: photon-neuro
